--- a/kompetetions.html
+++ b/kompetetions.html
@@ -10,7 +10,7 @@
     <script src = "js/script.js"></script>
     <script src = "js/cookies.js"></script>
 </head>
-<body class = "body_light" id = "body_id" onload = "isDarkTheme_kompetetions();">
+<body class = "body_light" id = "body_id" onload = "isDarkTheme_kompetetions(); isButtonShow();">
     <a class="logo" href="main.html"><img src="images/logo.jpg" alt="logotype" style="width:77px;height:77px;"></a>
     <nav class="menu-main nav_light" id="nav_id">
         <ui>
@@ -28,7 +28,7 @@
         <button onclick="add_theme()">Измменить тему</button>
     </article>
 
-    <div class="main" onload = "isButtonShow();">
+    <div class="main">
         
         <button class = "buttons_kompetetions" id="b1" onclick="button1();" style="display:none;">Показать блок 1</button>
         
