--- a/kompetetions.html
+++ b/kompetetions.html
@@ -25,7 +25,7 @@
     <article class="article article_light" id = "article_id">
         <h1>Веб-технологии</h1>
         <h3>Университет "Дубна"</h3>
-        <button onclick="add_theme()">Измменить тему</button>
+        <button onclick="add_theme_1()">Измменить тему</button>
     </article>
 
     <div class="main">
