--- a/kontacts.html
+++ b/kontacts.html
@@ -20,12 +20,12 @@
             <li><a href="kompetetions.html">Компетенции</a></li>
             <li><a href="kontacts.html">Контакты</a></li>
         </ui>
+        <button class = "ChangeTheme" onclick="add_theme_3()">Измменить тему</button>
     </nav>
 
     <article class="article article_light" id = "article_id">
         <h1>Веб-технологии</h1>
         <h3>Университет "Дубна"</h3>
-        <button onclick="add_theme_3()">Измменить тему</button>
     </article>
     
     <section id ="kontacts" class="main-section">
