--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
                     Размер галереи:
                 </div>
                 <div style="padding-top: 5px;">
-                    <input type="radio" name="gallery_size" id="gallery_size1" onclick = "Gallery_min()" checked>Маленький
+                    <input type="radio" name="gallery_size" id="gallery_size1" onclick = "Gallery_min()">Маленький
                     <input type="radio" name="gallery_size" id="gallery_size2" onclick = "Gallery_average()">Средний
                     <input type="radio" name="gallery_size" id="gallery_size3" onclick = "Gallery_max()">Большой
                 </div>
