--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script src = "js/script.js"></script>
     <script src = "js/cookies.js"></script>
 </head>
-<body class = "body_light" id = "body_id" onload = "isDarkTheme_main(); isGalleryStop(); isGallerySize();">
+<body class = "body_light" id = "body_id" onload = "isDarkTheme_main(); isGallerySize();">
     <a class="logo" href="main.html"><img src="images/logo.jpg" alt="logotype" style="width:77px;height:77px;"></a>
     <nav class="menu-main nav_light" id="nav_id">
         <ui>
