--- a/main.html
+++ b/main.html
@@ -64,15 +64,42 @@
         <section class="main-section background-color-pink" id = "main_id">
             <div class="wrapper">
                 <div>
-                    <div>
-                        <h1 class="text_possition">Заголовок</h1>
-                    </div>
-                    <div class="flex-row-div flex-row-div-between-center">
-                        Здесь должна быть информация обо мне, но мне было лень её написать. и всесто 'lorem' пусть висит этот текст, когда-нибудь исправлю. МЯУ 
-                    </div>
+                    <h1 class="text_possition">Заголовок</h1>
+                </div>
+                <div class="flex-row-div flex-row-div-between-center">
+                    Здесь должна быть информация обо мне, но мне было лень её написать. и всесто 'lorem' пусть висит этот текст, когда-нибудь исправлю. МЯУ 
                 </div>
             </div>
         </section> 
+
+        <br>
+        
+        <section class = "other_tasks background-color-pink" id = "other_id">
+            <div class = "wrapper">
+                <div>
+                    <h1 class = "text_possition"> Другие задания</h1>
+                </div>
+                <div class = "flex-row-div flex-row-div-between-center">
+                    <div class="possition">
+                        <a href="canvas.html">
+                            <img src="images/canvasImage.png" atl = "logotype" style="width:70px;height:70px;">
+                        </a>
+                        <div>
+                            Canvas
+                        </div>
+                    </div>
+                    <div class="possition">
+                        <a>
+                            <img src="images/basketImage.png" atl = "logotype" style="width:70px;height:70px;">
+                        </a>
+                        <div>
+                            Drag'n'drop
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
 
     <footer>
