--- a/DragNDrop.html
+++ b/DragNDrop.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://cdn.polyfill.io/v1/polyfill.js?features=Element.prototype.closest"></script>
-  <script src="DragManager.js"></script>
-  <link rel="stylesheet" href="DragNDrop.css">
+  <script src="js/DragManager.js"></script>
+  <link rel="stylesheet" href="css/DragNDrop.css">
   <script>
     DragManager.onDragCancel = function(dragObject) {
       dragObject.avatar.rollback();
