--- a/DragNDrop.html
+++ b/DragNDrop.html
@@ -20,19 +20,19 @@
   </script>
 </head>
 
-<body>
+<body onload = "FillTheBasket();">
 
     <div class="container">
         <section class="tasks">
           <h1 class="tasks__title">МакДак</h1>
           
-          <ul class="tasks__list">
-            <li class="tasks__item"><img src="ShopImages/1.png" alt="image" class = "images draggable" id = "image1"><p>100 Деняг</p></li>
-            <li class="tasks__item"><img src="ShopImages/2.png" alt="image" class = "images draggable" id = "image2"><p>150 Деняг</p></li>
-            <li class="tasks__item"><img src="ShopImages/3.png" alt="image" class = "images draggable" id = "image3"><p>200 Деняг</p></li>
-            <li class="tasks__item"><img src="ShopImages/4.png" alt="image" class = "images draggable" id = "image4"><p>230 Деняг</p></li>
-            <li class="tasks__item"><img src="ShopImages/5.png" alt="image" class = "images draggable" id = "image5"><p>300 Деняг</p></li>
-            <li class="tasks__item"><img src="ShopImages/6.png" alt="image" class = "images draggable" id = "image6"><p>450 Деняг</p></li>
+          <ul class="tasks__list" id = "ul">
+            <li class="tasks__item" id = "li1"><p>100 Деняг</p><img src="ShopImages/1.png" alt="image" class = "images draggable" id = "image1"></li>
+            <li class="tasks__item" id = "li2"><p>150 Деняг</p><img src="ShopImages/2.png" alt="image" class = "images draggable" id = "image2"></li>
+            <li class="tasks__item" id = "li3"><p>200 Деняг</p><img src="ShopImages/3.png" alt="image" class = "images draggable" id = "image3"></li>
+            <li class="tasks__item" id = "li4"><p>230 Деняг</p><img src="ShopImages/4.png" alt="image" class = "images draggable" id = "image4"></li>
+            <li class="tasks__item" id = "li5"><p>300 Деняг</p><img src="ShopImages/5.png" alt="image" class = "images draggable" id = "image5"></li>
+            <li class="tasks__item" id = "li6"><p>450 Деняг</p><img src="ShopImages/6.png" alt="image" class = "images draggable" id = "image6"></li>
           </ul>
         </section>
   
@@ -58,6 +58,9 @@
           </table>
           
         </section>
+        <secton>
+          <button onclick = "FinishBuying()">Приобрести</button>
+        </secton>
     </div>
 </body>
 
