--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-<head>
+<head lang="en">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-    <script src="maps.js"></script>
-    <title>Document</title>
+    <script src="js/timer.js"></script>
+    <script src="js/maps.js"></script>
+    <title>Internship test assignment</title>
 </head>
 
 <body style="background-color:#F5F5F5;">
     <header class="bg-white">
         <div class="d-flex flex-wrap justify-content-center justify-content-lg-start">
-            <a href="profile.html"
+            <a href="#profile"
                 class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-dark text-decoration-none">
                 <i class="bi bi-arrow-90deg-left px-2"></i>
                 <span class="fs-4 px-2"><b>User pages</b> - Profile</span>
@@ -39,14 +40,14 @@
         <div class="row justify-content-between">
             <ul class="nav nav-tabs col-12 col-lg-auto my-2 justify-content-center my-md-0">
                 <li class="nav-item">
-                    <a href="profile.html" class="nav-link text-dark"><i class="bi bi-list px-1"></i>Profile</a>
+                    <a href="#profile" class="nav-link text-dark bg-light active"><i
+                            class="bi bi-list px-1"></i>Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a href="maps.html" class="nav-link text-dark bg-light active"><i
-                            class="bi bi-geo-alt px-1"></i>Map</a>
+                    <a href="#maps" class="nav-link text-dark"><i class="bi bi-geo-alt px-1"></i>Map</a>
                 </li>
                 <li class="nav-item">
-                    <a href="timer.html" class="nav-link text-dark"><i class="bi bi-clock px-1"></i>Timer</a>
+                    <a href="#timer" class="nav-link text-dark"><i class="bi bi-clock px-1"></i>Timer</a>
                 </li>
             </ul>
 
@@ -70,22 +71,11 @@
         </div>
     </nav>
     <main>
-        <div class="bg-white p-4 m-3 rounded-3 shadow">
-            <p>Basic map</p>
-            <div id="map" class="loader-container">
-            </div>
-        </div>
+        <div id="app"></div>
+
+        <script src="js/route.js"></script>
+        <script src="js/router.js"></script>
+        <script src="js/app.js"></script>
     </main>
 </body>
-<style>
-    .loader-container {
-        width: 100%;
-        height: 400px;
-        background: #fff 
-            url("https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47ktqj2z67tc69n739u230iyevh8981ulxtoqqib0z&rid=giphy.gif&ct=g") 
-            center no-repeat;
-        z-index: 1;
-    }
-</style>
-
 </html>
