fix map loader and navigation system

--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
         <div class="row justify-content-between">
             <ul class="nav nav-tabs col-12 col-lg-auto my-2 justify-content-center my-md-0">
                 <li class="nav-item">
-                    <a href="#profile" class="nav-link text-dark bg-light active"><i
-                            class="bi bi-list px-1"></i>Profile</a>
+                    <a href="#profile" class="nav-link text-dark bg-light" id = "profile"><i class="bi bi-list px-1"></i>Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#maps" class="nav-link text-dark"><i class="bi bi-geo-alt px-1"></i>Map</a>
+                    <a href="#maps" class="nav-link text-dark" id = "maps"><i class="bi bi-geo-alt px-1"></i>Map</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#timer" class="nav-link text-dark"><i class="bi bi-clock px-1"></i>Timer</a>
+                    <a href="#timer" class="nav-link text-dark" id = "timer"><i class="bi bi-clock px-1"></i>Timer</a>
                 </li>
             </ul>
 
